view class base

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				</div>
 				<div class="form-group">
 					<label for="exampleFormControlSelect1">Продукт:</label>
-					<select id="product" name="product" class="form-control" id="exampleFormControlSelect1">
+					<select id="product" name="product" class="form-control">
 						<option value="course-html">Курс по верстке</option>
 						<option value="course-js">Курс по JavaScript</option>
 						<option value="course-vue">Курс по VUE JS</option>
