model: event bus logic correction

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<form id="form" method="POST" action="">
 				<label>Ваши данные:</label>
 				<div class="form-group">
-					<input id="name" type="text" name="name" autocomplete="on" class="form-control" placeholder="Имя и Фамилия" required>
+					<input id="name" type="text" name="full_name" autocomplete="on" class="form-control" placeholder="Имя и Фамилия" required>
 				</div>
 				<div class="form-group">
 					<input id="phone" type="text" name="phone" autocomplete="on" class="form-control" placeholder="Телефон">
