doc: added for model

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div class="white-plate__line-between white-plate__line-between--main"></div>
 
 			<form id="form" method="POST" action="">
-				<label>Ваши данные:</label>
+				<label for="name">Ваши данные:</label>
 				<div class="form-group">
 					<input id="name" type="text" name="full_name" autocomplete="on" class="form-control" placeholder="Имя и Фамилия" required>
 				</div>
@@ -46,7 +46,7 @@
 					<input id="email" type="email" name="email" autocomplete="on" class="form-control" placeholder="Email" required>
 				</div>
 				<div class="form-group">
-					<label for="exampleFormControlSelect1">Продукт:</label>
+					<label for="product">Продукт:</label>
 					<select id="product" name="product" class="form-control">
 						<option value="course-html">Курс по верстке</option>
 						<option value="course-js">Курс по JavaScript</option>
