view: table page some custome style for hover

--- a/table.html
+++ b/table.html
@@ -5,6 +5,7 @@
 		<title>02 - Таблица с заявками</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" href="css/main.css" />
+		<link rel="stylesheet" href="css/custom.css" />
 		<link
 			href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&amp;subset=cyrillic-ext"
 			rel="stylesheet"
