view: table style custom correction

--- a/table.html
+++ b/table.html
@@ -103,7 +103,7 @@
 							<th></th>
 						</tr>
 					</thead>
-					<tbody id="tbody">
+					<tbody id="tbody" class="table__body">
 						<!-- <tr>
 							<th scope="row">1</th>
 							<td>01.04.2020</td>
