view:  separate form methods from class task into class formactions

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 	<!-- Форма -->
 	<script src="./js/form/form.test-data.js" type="module"></script>
-	<script src="./js/form/form.view.js" type="module"></script>
+	<script src="./js/form/FormView/Form.view.js" type="module"></script>
 	<script src="./js/form/form.controller.js" type="module"></script>
 
 </body>
