controller: table file refactoring, separate file proto for methods

--- a/table.html
+++ b/table.html
@@ -113,8 +113,8 @@
 		<script src="./js/model.js" type="module"></script>
 
 		<!-- Таблица -->
-		<script src="./js/table/table.view.js" type="module"></script>
-		<script src="./js/table/table.controller.js" type="module"></script>
+		<script src="./js/table/TableView/Table.view.js" type="module"></script>
+		<script src="./js/table/TableController/Table.controller.js" type="module"></script>
 
 	</body>
 </html>
