--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 	<script src="./js/model.js" type="module"></script>
 
 	<!-- Форма -->
-	<script src="./js/form/form.test-data.js" type="module"></script>
-	<script src="./js/form/FormView/Form.view.js" type="module"></script>
-	<script src="./js/form/form.controller.js" type="module"></script>
+	<script src="./js/form/TestDataFactory.js" type="module"></script>
+	<script src="./js/form/TaskRender.js" type="module"></script>
+	<script src="./js/form/Controller.js" type="module"></script>
 
 </body>
 </html>
