--- a/edit.html
+++ b/edit.html
@@ -161,7 +161,7 @@
 		<script src="./js/model.js" type="module"></script>
 
 		<!-- Редактирование -->
-		<script src="./js/edit/Edit.view.js" type="module"></script>
+		<script src="./js/edit/EditFormRender.js" type="module"></script>
 		<script src="./js/edit/Edit.controller.js" type="module"></script>
 
 	</body>
