--- a/edit.html
+++ b/edit.html
@@ -91,8 +91,8 @@
 												type="text"
 												class="form-control"
 												value="Петр Сергеевич"
-												id="name"
-												name="name"
+												id="full_name"
+												name="full_name"
 											/>
 										</div>
 									</div>
@@ -136,7 +136,7 @@
 												<option selected="">Выберите...</option>
 												<option value="new">Новая</option>
 												<option value="inwork">В работе</option>
-												<option value="complete">Завершена</option>
+												<option value="completed">Завершена</option>
 											</select>
 										</div>
 									</div>
