formatter: correction getURL method

--- a/edit.html
+++ b/edit.html
@@ -43,7 +43,8 @@
 				<div class="row">
 					<!-- col -->
 					<div class="col">
-						<form id="form">
+            <!-- form -->
+						<form id="form" action="edit.html" method="POST">
 							<!-- card -->
 							<div class="card mb-4">
 								<div class="card-header">Данные о заявке</div>
@@ -149,6 +150,8 @@
 								</div>
 							</div>
 						</form>
+            <!--// form -->
+
 					</div>
 					<!-- //col -->
 				</div>
