fix: model form edit type error missed id

--- a/edit.html
+++ b/edit.html
@@ -72,9 +72,7 @@
 										<div class="col">
 											<select id="product" name="product" class="custom-select" >
 												<option value="course-html">Курс по верстке</option>
-												<option value="course-js">
-                          Курс по JavaScript
-                        </option>
+												<option value="course-js">Курс по JavaScript</option>
 												<option value="course-vue">Курс по VUE JS</option>
 												<option value="course-php">Курс по PHP</option>
 												<option value="course-wordpress">
