--- a/edit.html
+++ b/edit.html
@@ -143,7 +143,7 @@
 								</div>
 							</div>
 							<!-- //card -->
-							<div class="row justify-content-between">
+							<div class="row justify-content-between form__buttons">
 								<div class="col text-right">
 									<button type="submit" class="btn btn-primary">Сохранить изменения</button>
 								</div>
