--- a/table.html
+++ b/table.html
@@ -113,8 +113,8 @@
 		<script src="./js/model.js" type="module"></script>
 
 		<!-- Таблица -->
-		<script src="./js/table/TableView/Table.view.js" type="module"></script>
-		<script src="./js/table/TableController/Table.controller.js" type="module"></script>
+		<script src="./js/table/TableView/TableRender.js" type="module"></script>
+		<script src="./js/table/Table.controller.js" type="module"></script>
 
 	</body>
 </html>
