--- a/edit.html
+++ b/edit.html
@@ -164,7 +164,7 @@
 
 		<!-- Редактирование -->
 		<script src="./js/edit/EditFormRender.js" type="module"></script>
-		<script src="./js/edit/Edit.controller.js" type="module"></script>
+		<script src="./js/edit/EditController.js" type="module"></script>
 
 	</body>
 </html>
