general: data and html folders, path correction

--- a/html/edit.html
+++ b/html/edit.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>03 - Редактировать заявку</title>
-		<link rel="stylesheet" href="css/bootstrap.min.css" />
-		<link rel="stylesheet" href="css/main.css" />
-		<link rel="stylesheet" href="./css/custom.css" />
+		<link rel="stylesheet" href="./../css/bootstrap.min.css" />
+		<link rel="stylesheet" href="./../css/main.css" />
+		<link rel="stylesheet" href="./../css/custom.css" />
 
 		<link
 			href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&amp;subset=cyrillic-ext"
@@ -21,9 +21,9 @@
 		<!-- Навигация по проекту -->
 		<nav class="project-nav">
 			<div class="project-nav__links-wrapper">
-				<a href="index.html">Форма добавления заявок</a>
-				<a href="table.html">Таблица с заявками</a>
-				<a href="edit.html">Редактирование заявки</a>
+				<a href="./../index.html">Форма добавления заявок</a>
+				<a href="./table.html">Таблица с заявками</a>
+				<a href="./edit.html">Редактирование заявки</a>
 			</div>
 		</nav>
 
@@ -160,11 +160,11 @@
 		<!-- // main-wrapper -->
 
 		<!-- Модель -->
-		<script src="./js/model.js" type="module"></script>
+		<script src="./../js/model.js" type="module"></script>
 
 		<!-- Редактирование -->
-		<script src="./js/edit/EditFormRender.js" type="module"></script>
-		<script src="./js/edit/EditController.js" type="module"></script>
+		<script src="./../js/edit/EditFormRender.js" type="module"></script>
+		<script src="./../js/edit/EditController.js" type="module"></script>
 
 	</body>
 </html>
