--- a/html/table.html
+++ b/html/table.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>02 - Таблица с заявками</title>
-		<link rel="stylesheet" href="css/bootstrap.min.css" />
-		<link rel="stylesheet" href="css/main.css" />
-		<link rel="stylesheet" href="css/custom.css" />
+		<link rel="stylesheet" href="./../css/bootstrap.min.css" />
+		<link rel="stylesheet" href="./../css/main.css" />
+		<link rel="stylesheet" href="./../css/custom.css" />
 		<link
 			href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&amp;subset=cyrillic-ext"
 			rel="stylesheet"
@@ -20,9 +20,9 @@
 		<!-- Навигация по проекту -->
 		<nav class="project-nav">
 			<div class="project-nav__links-wrapper">
-				<a href="index.html">Форма добавления заявок</a>
-				<a href="table.html">Таблица с заявками</a>
-				<a href="edit.html">Редактирование заявки</a>
+				<a href="./../index.html">Форма добавления заявок</a>
+				<a href="./table.html">Таблица с заявками</a>
+				<a href="./edit.html">Редактирование заявки</a>
 			</div>
 		</nav>
 
@@ -37,7 +37,7 @@
 			<!-- User -->
 			<div class="left-panel__user clearfix">
 				<div class="left-panel__user-photo">
-					<img src="img/avatars/avatar-128.jpg" alt="Avatar" />
+					<img src="./../img/avatars/avatar-128.jpg" alt="Avatar" />
 				</div>
 				<div class="left-panel__user-name">Петр <br />Васильевич</div>
 			</div>
@@ -110,11 +110,11 @@
 		<!-- // main-wrapper -->
 
 		<!-- Модель -->
-		<script src="./js/model.js" type="module"></script>
+		<script src="./../js/model.js" type="module"></script>
 
 		<!-- Таблица -->
-		<script src="./js/table/TableView/TableRender.js" type="module"></script>
-		<script src="./js/table/Table.controller.js" type="module"></script>
+		<script src="./../js/table/TableView/TableRender.js" type="module"></script>
+		<script src="./../js/table/Table.controller.js" type="module"></script>
 
 	</body>
 </html>
