--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>01 - Форма</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css" />
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="./css/bootstrap.min.css" />
+	<link rel="stylesheet" href="./css/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&amp;subset=cyrillic-ext" rel="stylesheet">
 </head>
 
@@ -15,8 +15,8 @@
 	<nav class="project-nav">
 		<div class="project-nav__links-wrapper">
 			<a href="index.html">Форма добавления заявок</a>
-			<a href="table.html">Таблица с заявками</a>
-			<a href="edit.html">Редактирование заявки</a>
+			<a href="./html/table.html">Таблица с заявками</a>
+			<a href="./html/edit.html">Редактирование заявки</a>
 		</div>
 	</nav>
 
