--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<option value="course-wordpress">Курс по WordPress</option>
 					</select>
 				</div>
-				<div class="form-group">
+				<div class="form-group" id="noteWrapper">
 					<button type="submit" class="btn btn-lg btn-primary btn-block">Оформить заявку</button>
 				</div>
 			</form>
