refctoring:  form edit manager task load logic

--- a/html/edit.html
+++ b/html/edit.html
@@ -163,8 +163,8 @@
 		<script src="./../js/model.js" type="module"></script>
 
 		<!-- Редактирование -->
-		<script src="./../js/edit/EditFormRender.js" type="module"></script>
-		<script src="./../js/edit/EditController.js" type="module"></script>
+		<script src="./../js/pages/edit/EditFormRender.js" type="module"></script>
+		<script src="./../js/pages/edit/EditController.js" type="module"></script>
 
 	</body>
 </html>
