--- a/html/table.html
+++ b/html/table.html
@@ -113,8 +113,8 @@
 		<script src="./../js/model.js" type="module"></script>
 
 		<!-- Таблица -->
-		<script src="./../js/table/TableView/TableRender.js" type="module"></script>
-		<script src="./../js/table/Table.controller.js" type="module"></script>
+		<script src="./../js/pages/table/TableRender.js" type="module"></script>
+		<script src="./../js/pages/table/Table.controller.js" type="module"></script>
 
 	</body>
 </html>
