model: table filter base logic for several filters

--- a/html/table.html
+++ b/html/table.html
@@ -71,7 +71,7 @@
 								<a href="#" class="btn btn-light" data-value="all">Все</a>
 								<a href="#" class="btn btn-light" data-value="new">Новые</a>
 								<a href="#" class="btn btn-light" data-value="inwork">В работе</a>
-								<a href="#" class="btn btn-light" data-value="complete">Завершенные</a>
+								<a href="#" class="btn btn-light" data-value="completed">Завершенные</a>
 							</div>
 						</div>
 						<!-- // Col -->
