render: aside status in task table logic to act the same as status in nav panel

--- a/html/table.html
+++ b/html/table.html
@@ -45,11 +45,11 @@
 			<!-- Navigation 1 -->
 			<div class="left-panel__navigation">
 				<div class="left-panel__navigation-title">Заявки</div>
-				<ul>
+				<ul id="asideStatusNav">
 					<li><a data-value="all" data-role="left-status" href="#" class="active">Все вместе</a></li>
 					<li><a data-value="new" data-role="left-status" href="#" >Новые<div class="badge" id="badge-new"></div></a></li>
 					<li><a data-value="inwork" data-role="left-status" href="#">В работе</a></li>
-					<li><a data-value="complete" data-role="left-status" href="#">Завершенные</a></li>
+					<li><a data-value="completed" data-role="left-status" href="#">Завершенные</a></li>
 				</ul>
 			</div>
 			<!-- // Navigation 1 -->
